# Mirage-rs

./: .gitignore  BRAIN.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  config.json  install.sh  simulate_bdp.rs  test_client_config.json  test_poly.rs  test_server_config.json
.github/workflows/: build.yml  release.yml
brain/: architecture.md  background.md  flow.md  index.md  mindmap.md  roadmap.md  stack.md
brain/pages/: auth-ts-bootstrap-deadlock.md  (+20 more)
docs/: deploy-smoke-test.md  landscape-analysis.md
ebpf-src/: cgroup_connect.c  cgroup_connect.elf  dns_xdp.c  dns_xdp.elf  mss_clamp.c  mss_clamp.elf  sockmap.c  sockmap.elf  tc_divert.c  tc_divert.elf  transparent.c  transparent.elf
examples/: simulate_bdp.rs  test_align.rs  verify_cgroup_connect.rs  verify_cgroup_connect.sh  verify_dns_xdp.rs  verify_dns_xdp.sh  verify_mss_clamp.rs  verify_mss_clamp.sh  verify_tc_divert.rs  verify_tc_divert.sh  verify_tc_divert_orphan.rs  verify_tc_divert_orphan.sh  verify_tc_divert_tcp.rs  verify_tc_divert_tcp.sh  verify_udp_transparent.rs  verify_udp_transparent.sh  verify_wg_real_peer.rs  verify_wg_upstream_udp.rs
scripts/: ci-local.sh  test_bugfixes.sh
src/: config.rs  config_watcher.rs  lib.rs  lite.rs  monitor.rs  net_monitor.rs  node_uri.rs  time_sync.rs
templates/: config_client.jsonc  config_server.jsonc  lite_client.jsonc  lite_server.jsonc
tests/: integration_test.rs  test_cli_check_format.rs  test_fake_ip.rs  test_hello_auth.rs  test_lite_e2e.rs  test_mixed.rs  test_sniff.rs  test_ss2022_interop.rs  test_ss_upstream_e2e.rs  test_tls_fingerprint.rs
tools/: find_camouflage.py
(+59 files in other folders)
