[package]
name = "mirage-rs"
version = "0.4.5-alpha.22"
edition = "2021"

[lib]
name = "mirage_rs"
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
arc-swap = "1.9.1"
axum = "0.8.9"
aya = { version = "0.13.1", optional = true }
ring = "0.17"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
fastrand = "2.0.1"
hkdf = "0.13.0"
hmac = "0.13.0"
ipnet = "2.12.0"
lazy_static = "1.5.0"
libc = "0.2.186"
nix = { version = "0.29", features = ["socket", "net", "uio"] }
notify = "8.2.0"
poly1305 = "0.9.0"
rand = "0.10.1"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full", "net", "rt", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[features]
default = []
ebpf = ["dep:aya"]

# Debug examples (require ebpf feature so they don't break default cargo check)
[[example]]
name = "test_align"
path = "examples/test_align.rs"
required-features = ["ebpf"]

[[example]]
name = "verify_udp_transparent"
path = "examples/verify_udp_transparent.rs"
required-features = ["ebpf"]

[[example]]
name = "verify_tc_divert"
path = "examples/verify_tc_divert.rs"
required-features = ["ebpf"]

[[example]]
name = "simulate_bdp"
path = "examples/simulate_bdp.rs"
